Firs attempt on interface

--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 authors = ["Júlio Hoffimann"]
 version = "0.1.0"
 
+[deps]
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
+StaticArrays = "0.12"
 julia = "1"
 
 [extras]
