--- a/Project.toml
+++ b/Project.toml
@@ -1,17 +1,26 @@
 name = "Meshes"
 uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
-authors = ["Júlio Hoffimann"]
+authors = ["JuliaGeometry maintainers"]
 version = "0.1.0"
 
 [deps]
+EarCut_jll = "5ae413db-bbd1-5e63-b57d-d24a61df00f5"
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+IterTools = "1.3"
 StaticArrays = "0.12"
-julia = "1"
+StructArrays = "0.4"
+Tables = "1.0"
+julia = "1.5"
 
 [extras]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Random"]
