--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "Meshes"
 uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
-authors = ["JuliaGeometry maintainers"]
+authors = ["Júlio Hoffimann"]
 version = "0.1.0"
 
 [deps]
