--- a/Project.toml
+++ b/Project.toml
@@ -14,8 +14,9 @@ StaticArrays = "0.12"
 julia = "1.5"
 
 [extras]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Random"]
+test = ["Pkg", "Test", "Random"]
