--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Meshes"
 uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 authors = ["Júlio Hoffimann"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
@@ -10,6 +10,8 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+IterTools = "1.3"
+SpecialFunctions = "0.10"
 StaticArrays = "0.12"
 julia = "1.5"
 
