--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,13 @@ version = "0.3.0"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 IterTools = "1.3"
+RecipesBase = "1.1"
 SpecialFunctions = "0.10"
 StaticArrays = "0.12"
 julia = "1.5"
