--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Júlio Hoffimann and contributors"]
 version = "0.5.1"
 
 [deps]
+CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -12,6 +13,7 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+CircularArrays = "1.1"
 IterTools = "1.3"
 RecipesBase = "1.1"
 SpecialFunctions = "0.10, 1.1"
