--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CircularArrays = "1.1"
@@ -18,6 +19,7 @@ IterTools = "1.3"
 RecipesBase = "1.1"
 SpecialFunctions = "0.10, 1.1"
 StaticArrays = "0.12, 1.0"
+Tables = "1.3"
 julia = "1.5"
 
 [extras]
