--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
@@ -19,6 +20,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 CircularArrays = "1.1"
 Distances = "0.10"
 IterTools = "1.3"
+NearestNeighbors = "0.4"
 RecipesBase = "1.1"
 ReferenceFrameRotations = "0.5"
 SpecialFunctions = "0.10, 1.1"
