--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
@@ -25,6 +26,7 @@ RecipesBase = "1.1"
 ReferenceFrameRotations = "0.5"
 SpecialFunctions = "0.10, 1.1"
 StaticArrays = "0.12, 1.0"
+StatsBase = "0.33"
 Tables = "1.3"
 julia = "1.5"
 
