--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
+SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -24,6 +25,7 @@ IterTools = "1.3"
 NearestNeighbors = "0.4"
 RecipesBase = "1.1"
 ReferenceFrameRotations = "0.5"
+SimpleTraits = "0.9"
 SpecialFunctions = "0.10, 1.1"
 StaticArrays = "0.12, 1.0"
 StatsBase = "0.33"
