--- a/Project.toml
+++ b/Project.toml
@@ -1,24 +1,34 @@
 name = "Meshes"
 uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 authors = ["Júlio Hoffimann and contributors"]
-version = "0.7.0"
+version = "0.8.0"
 
 [deps]
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
+SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CircularArrays = "1.1"
+Distances = "0.10"
 IterTools = "1.3"
+NearestNeighbors = "0.4"
 RecipesBase = "1.1"
+ReferenceFrameRotations = "0.5"
+SimpleTraits = "0.9"
 SpecialFunctions = "0.10, 1.1"
 StaticArrays = "0.12, 1.0"
+StatsBase = "0.33"
 Tables = "1.3"
 julia = "1.5"
 
