--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+CategoricalArrays = "0.9"
 CircularArrays = "1.1"
 Distances = "0.10"
 IterTools = "1.3"
