--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+IteratorInterfaceExtensions = "82899510-4779-5014-852e-03e436cf321d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -17,6 +18,7 @@ SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
@@ -24,6 +26,7 @@ CategoricalArrays = "0.9"
 CircularArrays = "1.1"
 Distances = "0.10"
 IterTools = "1.3"
+IteratorInterfaceExtensions = "1.0"
 NearestNeighbors = "0.4"
 RecipesBase = "1.1"
 ReferenceFrameRotations = "0.5"
@@ -31,6 +34,7 @@ SimpleTraits = "0.9"
 SpecialFunctions = "0.10, 1.1"
 StaticArrays = "0.12, 1.0"
 StatsBase = "0.33"
+TableTraits = "1.0"
 Tables = "1.3"
 julia = "1.5"
 
