--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,6 +5,7 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReferenceTests = "324d217c-45ce-50fc-942e-d289b448e8cf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
