--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,7 @@ on:
 env:
   JULIA_NUM_THREADS: 2
   JULIA_DEBUG: GR
+  JULIA_GR_PROVIDER: GR
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
