--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+CategoricalArrays = "0.10"
 CircularArrays = "1.1"
 Distances = "0.10"
 IterTools = "1.3"
