--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Meshes"
 uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 authors = ["Júlio Hoffimann and contributors"]
-version = "0.17.7"
+version = "0.17.8"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -24,7 +24,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CategoricalArrays = "0.10"
-CircularArrays = "1.1"
+CircularArrays = "~1.1"
 Distances = "0.10"
 IterTools = "1.3"
 IteratorInterfaceExtensions = "1.0"
