--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CategoricalArrays = "0.10"
-CircularArrays = "~1.1"
+CircularArrays = "~1.1, 1"
 Distances = "0.10"
 IterTools = "1.3"
 IteratorInterfaceExtensions = "1.0"
