CompatHelper: bump compat for SpecialFunctions to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ NearestNeighbors = "0.4"
 RecipesBase = "1.1"
 ReferenceFrameRotations = "0.5, 1.0, 2"
 SimpleTraits = "0.9"
-SpecialFunctions = "0.10, 1.1"
+SpecialFunctions = "0.10, 1.1, 2"
 StaticArrays = "0.12, 1.0"
 StatsBase = "0.33"
 TableTraits = "1.0"
