--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ IterTools = "1.3"
 IteratorInterfaceExtensions = "1.0"
 NearestNeighbors = "0.4"
 RecipesBase = "1.1"
-ReferenceFrameRotations = "0.5, 1.0, 2"
+ReferenceFrameRotations = "0.5, 1.0, 2, 3"
 SimpleTraits = "0.9"
 SpecialFunctions = "0.10, 1.1, 2"
 StaticArrays = "0.12, 1.0"
