--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Meshes"
 uuid = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 authors = ["Júlio Hoffimann and contributors"]
-version = "0.22.2"
+version = "0.22.3"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -32,8 +32,8 @@ NearestNeighbors = "0.4"
 RecipesBase = "1.1"
 ReferenceFrameRotations = "3"
 SimpleTraits = "0.9"
-SpecialFunctions = "0.10, 1.1, 2.0"
-StaticArrays = "0.12, 1.0"
+SpecialFunctions = "1.1, 2.0"
+StaticArrays = "1.0"
 StatsBase = "0.33"
 TableTraits = "1.0"
 Tables = "1.3"
