--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Júlio Hoffimann and contributors"]
 version = "0.24.1"
 
 [deps]
+Bessels = "0e736298-9ec6-45e8-9647-e4fc86a2fe38"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
@@ -13,20 +14,19 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+Bessels = "0.2"
 CircularArrays = "1.3"
 Distances = "0.10"
 IterTools = "1.3"
 IteratorInterfaceExtensions = "1.0"
 NearestNeighbors = "0.4"
 ReferenceFrameRotations = "3"
-SpecialFunctions = "1.1, 2.0"
 StaticArrays = "1.0"
 StatsBase = "0.33"
 TableTraits = "1.0"
