--- a/test/Project.toml
+++ b/test/Project.toml
@@ -16,4 +16,5 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TransformsAPI = "756644eb-7399-463e-a86e-97605fb648cd"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
