--- a/Project.toml
+++ b/Project.toml
@@ -32,5 +32,5 @@ StaticArrays = "1.0"
 StatsBase = "0.33"
 TableTraits = "1.0"
 Tables = "1.8"
-TransformsAPI = "0.2"
+TransformsAPI = "0.2, 0.3"
 julia = "1.6"
