--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StaticArraysCore = "1e83bf80-4336-4d27-bf5d-d5a4f845583c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
@@ -28,7 +28,7 @@ IterTools = "1.3"
 IteratorInterfaceExtensions = "1.0"
 NearestNeighbors = "0.4"
 ReferenceFrameRotations = "3"
-StaticArrays = "1.0"
+StaticArraysCore = "1.4"
 StatsBase = "0.33"
 TableTraits = "1.0"
 Tables = "1.8"
