--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ IterTools = "1.3"
 IteratorInterfaceExtensions = "1.0"
 NearestNeighbors = "0.4"
 ReferenceFrameRotations = "3"
+StaticArrays = "1.0"
 StatsBase = "0.33"
 TableTraits = "1.0"
 Tables = "1.8"
