--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
-TransformsAPI = "756644eb-7399-463e-a86e-97605fb648cd"
+TransformsBase = "28dd2a49-a57a-4bfb-84ca-1a49db9b96b8"
 
 [compat]
 Bessels = "0.2"
@@ -32,5 +32,5 @@ StaticArrays = "1.0"
 StatsBase = "0.33"
 TableTraits = "1.0"
 Tables = "1.8"
-TransformsAPI = "0.4"
+TransformsBase = "0.1"
 julia = "1.6"
