--- a/test/Project.toml
+++ b/test/Project.toml
@@ -9,6 +9,7 @@ MeshViz = "9ecf9c4f-6e5a-4b5e-83ae-06f2c7a661d8"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PlyIO = "42171d58-473b-503a-8d5f-782019eb09ec"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
 ReferenceTests = "324d217c-45ce-50fc-942e-d289b448e8cf"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
