--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.26.6"
 Bessels = "0e736298-9ec6-45e8-9647-e4fc86a2fe38"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
@@ -22,6 +23,7 @@ TransformsBase = "28dd2a49-a57a-4bfb-84ca-1a49db9b96b8"
 Bessels = "0.2"
 CircularArrays = "1.3"
 Distances = "0.10"
+Graphs = "1.7"
 IterTools = "1.3"
 NearestNeighbors = "0.4"
 ReferenceFrameRotations = "3"
