--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ IterTools = "1.3"
 NearestNeighbors = "0.4"
 ReferenceFrameRotations = "3"
 StaticArrays = "1.0"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 Tables = "1.8"
 TransformsBase = "0.1"
 julia = "1.6"
