--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ CircularArrays = "1.3"
 Distances = "0.10"
 IterTools = "1.3"
 NearestNeighbors = "0.4"
+Rotations = "1.4"
 StaticArrays = "1.0"
 StatsBase = "0.33, 0.34"
 Tables = "1.8"
