--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,6 +5,7 @@ JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
 MeshViz = "9ecf9c4f-6e5a-4b5e-83ae-06f2c7a661d8"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 PlyIO = "42171d58-473b-503a-8d5f-782019eb09ec"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
