--- a/Project.toml
+++ b/Project.toml
@@ -17,10 +17,17 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TransformsBase = "28dd2a49-a57a-4bfb-84ca-1a49db9b96b8"
 
+[weakdeps]
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+
+[extensions]
+MeshesMakieExt = "Makie"
+
 [compat]
 Bessels = "0.2"
 CircularArrays = "1.3"
 Distances = "0.10"
+Makie = "0.19"
 NearestNeighbors = "0.4"
 Rotations = "1.5.1"
 StaticArrays = "1.0"
