--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TransformsBase = "28dd2a49-a57a-4bfb-84ca-1a49db9b96b8"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [weakdeps]
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
@@ -32,4 +33,5 @@ Rotations = "1.5.1"
 StaticArrays = "1.0"
 StatsBase = "0.33, 0.34"
 TransformsBase = "1.1"
+Unitful = "1.17"
 julia = "1.9"
