--- a/Project.toml
+++ b/Project.toml
@@ -27,9 +27,12 @@ MeshesMakieExt = "Makie"
 Bessels = "0.2"
 CircularArrays = "1.3"
 Distances = "0.10"
+LinearAlgebra = "1.9"
 Makie = "0.19"
 NearestNeighbors = "0.4"
+Random = "1.9"
 Rotations = "1.5.1"
+SparseArrays = "1.9"
 StaticArrays = "1.0"
 StatsBase = "0.33, 0.34"
 TransformsBase = "1.1"
