--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,11 +1,10 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
-JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 PlyIO = "42171d58-473b-503a-8d5f-782019eb09ec"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
-WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
 Documenter = "0.27"
