--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.40.4"
 [deps]
 Bessels = "0e736298-9ec6-45e8-9647-e4fc86a2fe38"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
+ComputedFieldTypes = "459fdd68-db75-56b8-8c15-d717a790f88e"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
