[WIP] Implement inverse projection for 'Mercator'

--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -31,6 +32,7 @@ Distances = "0.10"
 LinearAlgebra = "1.9"
 Makie = "0.20"
 NearestNeighbors = "0.4"
+Optim = "1.9"
 Random = "1.9"
 Rotations = "1.5.1"
 SparseArrays = "1.9"
